Fix external link icon spacing in the menu

--- a/assets/_scss/core_design.scss
+++ b/assets/_scss/core_design.scss
@@ -273,6 +273,9 @@ ul.arrow {
     #searchShow, #toggler {
         font-size: 1rem;
     }
+    .ext-link:after {
+        margin-left: 0.5em;
+    }
 }
 
 @media (min-width: 768px) and (max-width: 992px) {
